# 3D-Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  old.cpp  todo
extra/: 3D projection 2.ggb  3D projection 2.txt  player-camera_diagram.plantUML
src/: macros.h
src/camera/: camera.cpp  camera.h  full.txt
src/game/: full.txt  game.cpp  game.h
src/hashtable/: hashtable.cpp  hashtable.h
src/logging/: logging.cpp  logging.h
src/maps/: maps.cpp  maps.h
src/math/: graphics.h
src/objectEngine/: objectEngine.cpp  objectEngine.h
src/player/: player.cpp  player.h
src/render/: render.cpp  render.h
src/text/: full.txt  text.cpp  text.h
